--- a/latex/1.tex
+++ b/latex/1.tex
@@ -1,32 +1,18 @@
-%! Author = hsuhau
-%! Date = 2022/6/26
-
-% Preamble
-\documentclass[11pt]{article.cls}
-
-% Packages
-\usepackage{amsmath}
-\usepackage{booktabs}
-
-% Document
-\begin{document}
-
-\begin{table}
-    \centering
-    \begin{tabular}{r}
-        \toprule
-        \textbf{w_t  =
-    \begin{cases}
-      \log(y_t) & \text{if $\lambda=0$};  \\
-      (y_t^\lambda-1)/\lambda & \text{otherwise}.
-    \end{cases}} \\
-        \midrule
-
-        \bottomrule
-    \end{tabular}
-    \caption{}
-    \label{tab:}
+\begin{table}[!]
+\label{table1}
+\caption{my first table}
+\centering
+\begin{tabular}{|c|c|r|}
+	\hline
+	system& version& edit\\
+	\hline
+	Windows & MikTeX & TexMakerX \\
+	\hline
+	Unix/Linux & teTeX & Kile \\
+	\hline
+	Mac OS & MacTeX & TeXShop \\
+	\hline
+	common& TeX Live & TeXworks \\
+	\hline
+\end{tabular}
 \end{table}
-wt={log(yt)ifλ=0;(yλt−1)/λotherwise.
-
-\end{document}
